--- a/index.html
+++ b/index.html
@@ -7,22 +7,24 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=League+Script&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="styles/index.css">
     <link rel="stylesheet" href="styles/reset.css">
 </head>
 <body>
     <main>
-        <form id="form">
-            
-
-
+        <form class="form">
+            <h1 class="form__title">This is my form</h1>
+            <input type="name" placeholder="Your name">
+            <input type="email" placeholder="Your email">
+            <select name="dropdown" placeholder="Message Regarding"></select>
+            <textarea name="message" placeholder="Your Message"></textarea>
+            <button>Send Message</button>
             </form>
 
 
-
-
+            
     </main>
 </body>
 </html>
