--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
             
             <label for="message" class="label">Message</label>
             <textarea name="message" class="input" placeholder="enter your message"></textarea>
+
+            <input type="checkbox" class="checkbox">
             
-            <button>Send Message</button>
+            <button class="button">Submit</button>
             </form>
 
 
